single page modified

--- a/src/Screens/SingleHotel/index.scss
+++ b/src/Screens/SingleHotel/index.scss
@@ -1,329 +1,334 @@
 @import "styles/global.scss";
 .SinglePage {
-  &__section {
-    margin-top: 150px;
-  }
-  &__Nav {
-    position: absolute;
-    width: 100%;
-  }
-  &__Gallery {
-  }
-  .bloc-tabs {
-    display: flex;
-    // flex-direction: column;
-    margin-top: 50px;
-    @media (min-width: 768px) {
-      width: 90%;
-      flex-direction: row;
-      justify-content: center;
-      margin-left: auto;
-      margin-right: auto;
-      margin-top: 150px;
-    }
-  }
-  .tabs {
-    width: 50%;
-    text-align: center;
-    background: $white-color;
-    cursor: pointer;
-    border: 0;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.274);
-    position: relative;
-    outline: none;
-    color: $black-color;
-    text-decoration: none;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    gap: 5px;
-    white-space: nowrap;
-    font-size: 0.7rem;
-    padding: 2px;
-    @media (min-width: 767px) {
-      width: 100%;
-      padding: 15px;
-      font-size: 20px;
-    }
-    &:hover {
-      color: $black-color;
-    }
-  }
+	&__section {
+		margin-top: 150px;
+	}
+	&__Nav {
+		position: absolute;
+		width: 100%;
+	}
+	&__Gallery {
+	}
+	&__baseInformation {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.bloc-tabs {
+		display: flex;
+		// flex-direction: column;
+		margin-top: 50px;
+		@media (min-width: 768px) {
+			width: 90%;
+			flex-direction: row;
+			justify-content: center;
+			margin-left: auto;
+			margin-right: auto;
+		}
+	}
+	.tabs {
+		width: 50%;
+		text-align: center;
+		background: $white-color;
+		cursor: pointer;
+		border: 0;
+		border-bottom: 2px solid rgba(0, 0, 0, 0.274);
+		position: relative;
+		outline: none;
+		color: $black-color;
+		text-decoration: none;
+		font-weight: bold;
+		display: flex;
+		justify-content: center;
+		gap: 5px;
+		white-space: nowrap;
+		font-size: 0.7rem;
+		padding: 2px;
+		@media (min-width: 767px) {
+			width: 100%;
+			padding: 15px;
+			font-size: 20px;
+		}
+		&:hover {
+			color: $black-color;
+		}
+	}
 
-  .active-tabs {
-    background: white;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.274);
-    color: $red-color;
-    &:hover {
-      color: $red-color;
-    }
-  }
+	.active-tabs {
+		background: white;
+		border-bottom: 2px solid rgba(0, 0, 0, 0.274);
+		color: $red-color;
+		&:hover {
+			color: $red-color;
+		}
+	}
 
-  .content-tabs {
-    flex-grow: 1;
-  }
-  .content {
-    background: white;
-    padding: 20px;
-    width: 100%;
-    height: 100%;
-    display: none;
-  }
-  .content h2 {
-    padding: 0px 0 5px 0px;
-  }
-  .content hr {
-    width: 100px;
-    height: 2px;
-    background: #222;
-    margin-bottom: 5px;
-  }
-  .content p {
-    width: 100%;
-    height: 100%;
-  }
-  .active-content {
-    display: block;
-  }
-  .single-hotel-description {
-    color: $gray-color;
-    border: 1px solid $gray-color;
-    border-radius: 30px;
-    padding: 3.25rem !important;
-    h2 {
-      font-size: 22px;
-      font-weight: bold;
-    }
-    p {
-      font-size: 1rem;
-    }
-    @media (min-width: 768px) {
-      h2 {
-        font-size: 35px;
-      }
-      p {
-        font-size: 22px;
-      }
-    }
-  }
-  .single-hotel-facalities {
-    color: $gray-color;
-    border: 1px solid $gray-color;
-    border-radius: 30px;
-    padding: 3.25rem !important;
-    h2 {
-      font-size: 22px;
-      font-weight: bold;
-    }
-    @media (min-width: 767px) {
-      h2 {
-        font-size: 35px;
-      }
-    }
-  }
-  .single-hotel-room {
-    color: $gray-color;
-    border: 1px solid $gray-color;
-    border-radius: 30px;
-    padding: 2.25rem !important;
-    h2 {
-      font-size: 22px;
-      font-weight: bold;
-    }
-    @media (min-width: 767px) {
-      padding: 3.25rem !important;
-      h2 {
-        font-size: 35px;
-      }
-    }
-  }
-  .tag-tabs {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    gap: 10px;
-    width: 80%;
-    margin: 3.125rem auto;
-    flex-wrap: wrap;
-    a {
-      display: flex;
-      justify-content: center;
-      gap: 3px;
-      border: 1px solid #eeeeee;
-      font-weight: bold;
-      box-shadow: 0px 4px 10px rgba($color: #141428, $alpha: 4%);
-      border-radius: 30px;
-      text-decoration: none;
-      color: $black-color;
-      white-space: nowrap;
-      padding: 10px 20px;
-      font-size: 0.7rem;
-      flex: 1 1 50px;
-      transition: all 200ms ease-in-out;
-      @media (min-width: 767px) {
-        padding: 13px 30px;
-        font-size: 1rem;
-      }
+	.content-tabs {
+		flex-grow: 1;
+	}
+	.content {
+		background: white;
+		padding: 20px;
+		width: 100%;
+		height: 100%;
+		display: none;
+	}
+	.content h2 {
+		padding: 0px 0 5px 0px;
+	}
+	.content hr {
+		width: 100px;
+		height: 2px;
+		background: #222;
+		margin-bottom: 5px;
+	}
+	.content p {
+		width: 100%;
+		height: 100%;
+	}
+	.active-content {
+		display: block;
+		margin-bottom: 1rem;
+	}
+	.single-hotel-description {
+		color: $gray-color;
+		border: 1px solid $gray-color;
+		border-radius: 30px;
+		padding: 3.25rem !important;
+		h2 {
+			font-size: 22px;
+			font-weight: bold;
+		}
+		p {
+			font-size: 1rem;
+		}
+		@media (min-width: 768px) {
+			h2 {
+				font-size: 35px;
+			}
+			p {
+				font-size: 22px;
+			}
+		}
+	}
+	.single-hotel-facalities {
+		color: $gray-color;
+		border: 1px solid $gray-color;
+		border-radius: 30px;
+		padding: 3.25rem !important;
+		h2 {
+			font-size: 22px;
+			font-weight: bold;
+		}
+		@media (min-width: 767px) {
+			h2 {
+				font-size: 35px;
+			}
+		}
+	}
+	.single-hotel-room {
+		color: $gray-color;
+		border: 1px solid $gray-color;
+		border-radius: 30px;
+		padding: 2.25rem !important;
+		h2 {
+			font-size: 22px;
+			font-weight: bold;
+		}
+		@media (min-width: 767px) {
+			padding: 3.25rem !important;
+			h2 {
+				font-size: 35px;
+			}
+		}
+	}
+	.tag-tabs {
+		display: flex;
+		justify-content: center;
+		align-items: flex-end;
+		gap: 10px;
+		width: 80%;
+		margin: 3.125rem auto;
+		flex-wrap: wrap;
+		a {
+			display: flex;
+			justify-content: center;
+			gap: 3px;
+			border: 1px solid #eeeeee;
+			font-weight: bold;
+			box-shadow: 0px 4px 10px rgba($color: #141428, $alpha: 4%);
+			border-radius: 30px;
+			text-decoration: none;
+			color: $black-color;
+			white-space: nowrap;
+			padding: 10px 20px;
+			font-size: 0.7rem;
+			flex: 1 1 50px;
+			transition: all 200ms ease-in-out;
+			@media (min-width: 767px) {
+				padding: 13px 30px;
+				font-size: 1rem;
+			}
 
-      &:hover {
-        background-color: $red-color;
-        color: $white-color;
-      }
-    }
-  }
-  .amenities__wrapper {
-    color: $black-color;
-    font-size: 1rem;
-    font-weight: bold;
-    padding-bottom: 10px;
-    @media (min-width: 767px) {
-      font-size: 18px;
-    }
-    span {
-      margin-left: 5px;
-    }
-  }
-  .room-details__wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-    color: $gray-color;
-    div {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
-      i {
-        color: $black-color;
-        font-size: 2rem;
-      }
-      span {
-        font-size: 1rem;
-      }
-      @media (min-width: 767px) {
-        i {
-          font-size: 3.125rem;
-        }
-        span {
-          font-size: 1.875rem;
-        }
-      }
-    }
-  }
-  .section__header {
-    padding: 0.5rem;
-    border-bottom: 1px solid #707070;
-    margin-bottom: 15px;
-    span {
-      color: $black-color;
-      font-weight: bold;
-      font-size: 1rem;
-    }
-  }
-  .section__header__row {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.5rem;
-    border-bottom: 1px solid #707070;
-    margin-bottom: 15px;
-    span {
-      color: $black-color;
-      font-weight: bold;
-      font-size: 1rem;
-    }
-    &__rating {
-      display: flex;
-      justify-content: center;
-      align-items: stretch;
-      &__wrapper {
-        padding: 8px;
-      }
-      .total-rating {
-        padding: 8px;
-        line-height: 1.9;
-      }
-    }
-  }
-  .area-Info-category {
-    display: flex;
-    gap: 5px;
-    font-size: 22px;
-    color: $black-color;
-    font-weight: bold;
-  }
-  .places-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-    .places {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      span {
-        font-weight: 300;
-        color: $gray-color;
-      }
-      p {
-        color: $gray-color;
-        font-weight: 300;
-      }
-    }
-  }
-  .review-wrapper {
-    display: flex;
-    gap: 25px;
-  }
+			&:hover {
+				background-color: $red-color;
+				color: $white-color;
+			}
+		}
+	}
+	.amenities__wrapper {
+		color: $black-color;
+		font-size: clac(1rem -2px);
+		font-weight: 400;
+		padding-bottom: 10px;
+		@media (min-width: 767px) {
+			font-size: 18px;
+		}
+		span {
+			margin-left: 5px;
+		}
+	}
+	.room-details__wrapper {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		font-weight: bold;
+		color: $gray-color;
+		div {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			gap: 10px;
+			i {
+				color: $black-color;
+				font-size: 2rem;
+			}
+			span {
+				font-size: 1rem;
+			}
+			@media (min-width: 767px) {
+				i {
+					font-size: 3.125rem;
+				}
+				span {
+					font-size: 1.875rem;
+				}
+			}
+		}
+	}
+	.section__header {
+		padding: 0.5rem;
+		border-bottom: 1px solid #707070;
+		margin-bottom: 15px;
+		span {
+			color: $black-color;
+			font-weight: bold;
+			font-size: 1rem;
+		}
+	}
+	.section__header__row {
+		width: 100%;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 0.5rem;
+		border-bottom: 1px solid #707070;
+		margin-bottom: 15px;
+		span {
+			color: $black-color;
+			font-weight: bold;
+			font-size: 1rem;
+		}
+		&__rating {
+			display: flex;
+			justify-content: center;
+			align-items: stretch;
+			&__wrapper {
+				padding: 8px;
+			}
+			.total-rating {
+				padding: 8px;
+				line-height: 1.9;
+			}
+		}
+	}
+	.area-Info-category {
+		display: flex;
+		gap: 5px;
+		font-size: 22px;
+		color: $black-color;
+		font-weight: bold;
+	}
+	.places-wrapper {
+		display: flex;
+		justify-content: center;
+		align-items: flex-start;
+		flex-direction: column;
+		.places {
+			width: 100%;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			span {
+				font-weight: 300;
+				color: $gray-color;
+			}
+			p {
+				color: $gray-color;
+				font-weight: 300;
+			}
+		}
+	}
+	.review-wrapper {
+		display: flex;
+		gap: 25px;
+	}
 
-  .category__rating {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 10px;
-    &__wrapper {
-      padding: 8px;
-      border-right: 1px solid transparent;
-    }
-    .total-rating {
-      padding: 8px;
-      line-height: 1.9;
-    }
-  }
-  .house__rules__wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    .house__rules {
-      display: flex;
-      flex-direction: column;
-      align-items: stretch;
-      width: 100%;
-      gap: 20px;
-      margin-top: 20px;
-      margin-bottom: 20px;
-      @media (min-width: 767px) {
-        flex-direction: row;
-        align-items: center;
-      }
-      span {
-        width: 30%;
-        white-space: nowrap;
-        font-weight: bold;
-      }
-      p {
-        width: 70%;
-        max-width: 500px;
-      }
-      .timebar-wrapper {
-        width: 70%;
+	.category__rating {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		margin-bottom: 10px;
+		&__wrapper {
+			padding: 8px;
+			border-right: 1px solid transparent;
+		}
+		.total-rating {
+			padding: 8px;
+			line-height: 1.9;
+		}
+	}
+	.house__rules__wrapper {
+		display: flex;
+		flex-direction: column;
+		align-items: stretch;
+		.house__rules {
+			display: flex;
+			flex-direction: column;
+			align-items: stretch;
+			width: 100%;
+			gap: 20px;
+			margin-top: 20px;
+			margin-bottom: 20px;
+			@media (min-width: 767px) {
+				flex-direction: row;
+				align-items: center;
+			}
+			span {
+				width: 30%;
+				white-space: nowrap;
+				font-weight: bold;
+			}
+			p {
+				width: 70%;
+				max-width: 500px;
+			}
+			.timebar-wrapper {
+				width: 70%;
 
-        max-width: 500px;
-      }
-    }
-  }
+				max-width: 500px;
+			}
+		}
+	}
 }
