--- a/src/components/Cards/UnitCard/index.scss
+++ b/src/components/Cards/UnitCard/index.scss
@@ -5,40 +5,66 @@
 		box-shadow: $box-shadow;
 		padding: 1rem;
 		margin-bottom: 1rem;
+		border-radius: 22px;
 
 		.unitcard {
 			position: relative;
 			display: flex;
+			flex-direction: column;
 			justify-content: space-between;
 			align-items: flex-start;
 			margin-bottom: 1rem;
-			border-radius: 6px;
-
+			@media (min-width: 767px) {
+				flex-direction: row;
+			}
 			&__informations {
 				display: flex;
 				flex-direction: column;
 				&__title {
-					font-size: 1.8rem;
+					// font-size: 1.8rem;
+					font-size: 1rem;
 					font-weight: 500;
 				}
 				&__icons {
 					display: flex;
 					gap: 10px;
+					font-size: 0.8rem;
+					// font-size: 1rem;
 					span {
 						display: flex;
 						align-items: center;
 						gap: 5px;
 					}
 				}
+				@media (min-width: 767px) {
+					&__title {
+						font-size: 1.8rem;
+					}
+					&__icons {
+						font-size: 1rem;
+					}
+				}
 			}
 			&__price {
+				width: 100%;
+				margin-top: 10px;
 				display: flex;
-				flex-direction: column;
+				justify-content: space-between;
 				align-items: center;
 				p {
-					font-size: 1.5rem;
+					margin: 0;
+					font-size: 1.1rem;
 					color: $red-color;
 					font-weight: 600;
+				}
+				@media (min-width: 767px) {
+					flex-direction: column;
+					justify-content: unset;
+					width: unset;
+					margin-top: 0px;
+					p {
+						font-size: 1.5rem;
+					}
 				}
 			}
 			.openDescription {
