--- a/src/Screens/SingleHotel/index.scss
+++ b/src/Screens/SingleHotel/index.scss
@@ -1,7 +1,7 @@
 @import "styles/global.scss";
 .SinglePage {
 	&__section {
-		margin-top: 150px;
+		margin-top: 100px;
 	}
 	&__Nav {
 		position: absolute;
@@ -100,7 +100,6 @@
 	}
 	.active-content {
 		display: block;
-		margin-bottom: 1rem;
 	}
 	.single-hotel-description {
 		color: $gray-color;
@@ -391,4 +390,10 @@
 	&::after {
 		content: "" !important;
 	}
+}
+.reservation-filter {
+	position: fixed;
+	right: 20px;
+	bottom: 20px;
+	z-index: 1000;
 }
