--- a/src/components/Accordion/index.scss
+++ b/src/components/Accordion/index.scss
@@ -1,41 +1,41 @@
 @import "styles/global.scss";
 $arrowDown: url("data:image/svg+xml,%3Csvg fill='%23ff3f3f' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 384 512'%3E%3C!--! Font Awesome Pro 6.0.0-alpha3 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) --%3E%3Cpath d='M374.6 310.6l-160 160C208.4 476.9 200.2 480 192 480s-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 370.8V64c0-17.69 14.33-31.1 31.1-31.1S224 46.31 224 64v306.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0S387.1 298.1 374.6 310.6z'/%3E%3C/svg%3E");
 #mainFAQ {
-  height: 100%;
-  @media (max-width: 767px) {
-    width: 100%;
-    padding: 1rem;
-  }
+	height: 100%;
+	@media (max-width: 767px) {
+		width: 100%;
+		padding: 1rem;
+	}
 
-  align-items: center;
-  .accordion-flush {
-      @media (max-width: 767px) {
-      padding-right: 1rem;
-      padding-left: 1rem;
-    }
-  }
+	align-items: center;
+	.accordion-flush {
+		@media (max-width: 767px) {
+			padding-right: 1rem;
+			padding-left: 1rem;
+		}
+	}
 }
 .accordion-button {
-  background-color: $red-color !important;
-  color: #fff !important;
-  border-radius: 16px !important;
-  margin-bottom: 10px;
+	// background-color: $red-color !important;
+	color: #333 !important;
+	border-radius: 16px !important;
+	margin-bottom: 10px;
 }
 .accordion-button:not(.collapsed) {
-  background-color: rgba($color: $red-color, $alpha: 0.2) !important;
-  color: #333 !important;
+	background-color: rgba($color: $red-color, $alpha: 0) !important;
+	color: #333 !important;
 }
 .accordion-button:focus {
-  border-color: hsl(0, 0%, 24%);
-  outline: 0;
-  box-shadow: 0 0 0 0.05rem #f25487 !important;
+	border-color: hsl(0, 0%, 24%);
+	outline: 0;
+	box-shadow: 0 0 0 0.05rem transparent !important;
 }
 .accordion-button::after {
-  background-image: $arrowDown !important;
-  background-size: 12px !important;
-  background-color: #fff;
-  background-position: center;
-  border-radius: 50%;
+	background-image: $arrowDown !important;
+	background-size: 12px !important;
+	background-color: #fff;
+	background-position: center;
+	border-radius: 50%;
 }
 .accordion-button:not(.collapsed)::after {
 }
@@ -43,19 +43,19 @@ $arrowDown: url("data:image/svg+xml,%3Csvg fill='%23ff3f3f' xmlns='http://www.w3
 }
 
 .accordion-title {
-  align-items: center;
-  text-align: center;
-  border-bottom: 1px solid #00000021;
-  padding-bottom: 1rem;
+	align-items: center;
+	text-align: center;
+	border-bottom: 1px solid #00000021;
+	padding-bottom: 1rem;
 }
 
 .bottomText {
-  padding-top: 2rem;
-  text-align: center;
-  align-items: center;
-  .accordion-link {
-    color: #f25487 !important;
-    text-decoration: none;
-    // font-style: italic;
-  }
+	padding-top: 2rem;
+	text-align: center;
+	align-items: center;
+	.accordion-link {
+		color: #f25487 !important;
+		text-decoration: none;
+		// font-style: italic;
+	}
 }
