--- a/src/components/CustomDatePicker/index.scss
+++ b/src/components/CustomDatePicker/index.scss
@@ -1,39 +1,40 @@
+@import "styles/global.scss";
 .custom-datepicker {
-  z-index: 100;
+	z-index: 100;
 
-  .rmdp-today {
-    background-color: unset;
-    border: 2px solid #7ea6f0;
-  }
-  .rmdp-day.rmdp-today span {
-    background-color: unset;
-  }
-  .rmdp-rtl {
-    width: 100% !important;
-  }
-  .rmdp-day.rmdp-today.rmdp-range{
-    background-color: #f25487;
-    border: 0;
-  }
-  @media (min-width: 500px) {
-    .rmdp-week-day {
-      font-size: 0.8rem;
-    }
-    .rmdp-calendar {
-      padding: 0 !important;
-    }
-    .rmdp-top-class {
-      width: 100% !important;
-    }
+	.rmdp-today {
+		background-color: unset;
+		// border: 2px solid #7ea6f0;
+	}
+	.rmdp-day.rmdp-today span {
+		background-color: unset;
+	}
+	.rmdp-rtl {
+		width: 100% !important;
+	}
+	.rmdp-day.rmdp-today.rmdp-range {
+		background-color: #f25487;
+		border: 0;
+	}
+	@media (min-width: 500px) {
+		.rmdp-week-day {
+			font-size: 0.8rem;
+		}
+		.rmdp-calendar {
+			padding: 0 !important;
+		}
+		.rmdp-top-class {
+			width: 100% !important;
+		}
 
-    .rmdp-wrapper {
-      width: 100%;
-    }
-    .rmdp-day-picker div {
-      width: 100% !important;
-      min-width: 60px;
-    }
-  }
+		.rmdp-wrapper {
+			width: 100%;
+		}
+		.rmdp-day-picker div {
+			width: 100% !important;
+			min-width: 60px;
+		}
+	}
 }
 
 // .rmdp-header div {
@@ -42,62 +43,67 @@
 // }
 
 .custom-day-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  .custom-day {
-    display: block !important;
-    margin: 0;
-  }
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	.custom-day {
+		display: block !important;
+		margin: 0;
+	}
 }
 
 .custom-input {
-  background-color: hsl(0, 0%, 100%);
-  border-color: hsl(0, 0%, 80%);
-  border-radius: 4px;
-  border-style: solid;
-  border-width: 1px;
-  cursor: default;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  min-height: 38px;
-  outline: 0 !important;
-  position: relative;
-  transition: all 100ms;
-  box-sizing: border-box;
-  margin-top: 10px;
-  box-shadow: rgb(0 0 0 / 15%) 1.95px 1.95px 2.6px;
-  color: #333;
-  width: 100%;
-  padding-right: 10px;
+	background-color: hsl(0, 0%, 100%);
+	border-color: hsl(0, 0%, 80%);
+	border-radius: 4px;
+	border-style: solid;
+	border-width: 1px;
+	cursor: default;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	min-height: 38px;
+	outline: 0 !important;
+	position: relative;
+	transition: all 100ms;
+	box-sizing: border-box;
+	margin-top: 10px;
+	box-shadow: rgb(0 0 0 / 15%) 1.95px 1.95px 2.6px;
+	color: #333;
+	width: 100%;
+	padding-right: 10px;
 }
 
 .rmdp-range.start {
-  border-bottom-left-radius: unset;
-  border-bottom-right-radius: unset !important;
-  border-top-left-radius: unset;
-  border-top-right-radius: unset !important;
+	border-bottom-left-radius: unset;
+	border-bottom-right-radius: unset !important;
+	border-top-left-radius: unset;
+	border-top-right-radius: unset !important;
 }
 .rmdp-range.end {
-  border-radius: 0px !important;
+	border-radius: 0px !important;
 }
 
 .rmdp-day:not(.rmdp-disabled):not(.rmdp-day-hidden) span:hover {
-  background-color: unset;
-  color: #333;
-}
-.rmdp-day.rmdp-today span {
-  background-color: unset;
-  color: #333;
-}
-.rmdp-day:not(.rmdp-disabled):not(.rmdp-day-hidden) .highlight-red:hover {
-  background-color: unset;
+	background-color: $red-color;
+	color: #fff;
+	box-shadow: unset;
 }
 .rmdp-day:hover {
-  background-color: #f7d9d9;
+	color: #fff;
+}
+.rmdp-day.rmdp-today span {
+	background-color: unset;
+	color: #333;
+}
+.rmdp-day:not(.rmdp-disabled):not(.rmdp-day-hidden) .highlight-red:hover {
+	background-color: unset;
+	color: #fff;
+}
+.rmdp-day:hover {
+	background-color: $red-color;
 }
 .rmdp-range {
-  background-color: #f25487;
-  box-shadow: 0 0 3px #f25487;
+	background-color: #f25487;
+	box-shadow: 0 0 3px #f25487;
 }
