--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -1,9 +1,28 @@
+@import "styles/global.scss";
 .main-layout {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  .main-content {
-    flex: 1;
-  }
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	.main-content {
+		flex: 1;
+	}
+}
+.scroll-to-top {
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 50px;
+	height: 50px;
+	background-color: $red-color;
+	position: fixed;
+	border-radius: 50%;
+	left: 20px;
+	bottom: 20px;
+	z-index: 1000;
+	i {
+		font-size: 1.3rem;
+		color: #fff;
+	}
 }
