--- a/src/components/Cards/HouseCard/index.scss
+++ b/src/components/Cards/HouseCard/index.scss
@@ -20,7 +20,6 @@
 			}
 		}
 		&__body {
-			// padding: 32px 24px;
 			margin-left: 24px;
 			margin-right: 24px;
 			padding-bottom: 32px;
@@ -31,6 +30,7 @@
 				text-overflow: ellipsis;
 				width: 100%;
 				overflow: hidden;
+				font-size: 1.5rem;
 			}
 			p {
 				margin: 0;
