--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -26,11 +26,7 @@ $red-color: #ff3f3f;
 $black-color: #191919;
 $gray-color: #5d5d5d;
 $white-color: #ffffff;
-$box-shadow: 0 2px 12px
-	rgba(
-		$color: $black-color,
-		$alpha: 8%,
-	);
+$box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
 .btn-main {
 	background-color: $red-color;
 	color: $white-color;
