components fontsize changed to rem

--- a/src/components/Cards/HouseCard/index.scss
+++ b/src/components/Cards/HouseCard/index.scss
@@ -72,17 +72,17 @@
 			padding: 32px 24px;
 			&__price {
 				span {
-					font-size: 18px;
+					font-size: 1.285rem;
 					color: #5d5d5d;
 					strong {
-						font-size: 22px;
+						font-size: 1.571rem;
 						font-weight: bold;
 						color: $black-color;
 						padding: 0;
 						margin: 0;
 					}
 					small {
-						font-size: 16px;
+						font-size: 1.2rem;
 						color: #8b8b8b;
 					}
 				}
