--- a/src/components/Cards/ReviewCard/index.scss
+++ b/src/components/Cards/ReviewCard/index.scss
@@ -37,7 +37,7 @@
 				align-items: flex-start;
 			}
 			&__name {
-				font-size: 25px;
+				font-size: 1.785rem;
 				font-weight: bold;
 			}
 			&__country {
@@ -52,7 +52,7 @@
 	}
 	&__body {
 		margin-top: 20px;
-		font-size: 15px;
+		font-size: 1.1rem;
 		color: #191919;
 		p {
 			margin: 0;
