--- a/src/components/DynamicImage/index.scss
+++ b/src/components/DynamicImage/index.scss
@@ -11,7 +11,7 @@
 		position: relative;
 		margin-bottom: 45px;
 		font-family: "Oswald", sans-serif;
-		font-size: 44px;
+		font-size: 3.142rem;
 		text-transform: uppercase;
 		color: #424242;
 	}
