--- a/src/components/FullNavBar/index.scss
+++ b/src/components/FullNavBar/index.scss
@@ -36,7 +36,7 @@
 
 					li {
 						white-space: nowrap;
-						font-size: 18px;
+						font-size: 1.285rem;
 						font-weight: 400;
 						cursor: pointer;
 						a {
