--- a/src/components/UnitFinder/index.scss
+++ b/src/components/UnitFinder/index.scss
@@ -3,7 +3,7 @@
 	font-weight: 300;
 	line-height: 1.25;
 	color: rgba(19, 27, 31, 0.5);
-	font-size: 14px;
+	font-size: 1rem;
 }
 .UnitFinder {
 	position: relative;
@@ -28,7 +28,7 @@
 		}
 	}
 	i {
-		font-size: 20px;
+		font-size: 1.49rem;
 	}
 	&__wrapper {
 		padding: 2rem;
