--- a/src/components/Cards/HostInfoCard/index.scss
+++ b/src/components/Cards/HostInfoCard/index.scss
@@ -7,8 +7,8 @@
 		padding: 10px 0;
 		border-bottom: 1px solid #707070;
 		span {
-			font-size: 1.5rem;
-			color: $black-color;
+			font-size: 2.5rem;
+			color: $gray-color;
 			font-weight: bold;
 		}
 		&__score {
