add unit validation created

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -44,3 +44,7 @@ $box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
 .css-1ioqvny-MuiPaper-root-MuiDrawer-paper {
 	z-index: 1039 !important;
 }
+.input-error {
+	color: $red-color;
+	font-size: 12px;
+}
