--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -26,6 +26,7 @@ $red-color: #ff3f3f;
 $black-color: #191919;
 $gray-color: #5d5d5d;
 $white-color: #ffffff;
+$green-color: #01bb04;
 $box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
 .btn-main {
 	background-color: $red-color;
