--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -42,6 +42,22 @@ $box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
 		color: $black-color;
 	}
 }
+.small-btn-main {
+	border: 0;
+	outline: 0;
+	background-color: $red-color;
+	color: $white-color;
+	padding: 6px 12px;
+	border-radius: 5px;
+	font-size: 12px;
+	font-weight: bold;
+	box-shadow: "0px 4px 10px rgba(20, 20 ,40, .04)";
+	transition: all 200ms ease-in-out;
+	&:hover {
+		background-color: $white-color;
+		color: $black-color;
+	}
+}
 .css-1ioqvny-MuiPaper-root-MuiDrawer-paper {
 	z-index: 1039 !important;
 }
