reset unitdinder form

--- a/src/Screens/HomeScreen/HomeScreen.scss
+++ b/src/Screens/HomeScreen/HomeScreen.scss
@@ -156,6 +156,7 @@
 	align-items: center;
 	width: 90%;
 	margin: 0 auto;
+	margin-bottom: 1rem;
 	@media (min-width: 767px) {
 		flex-direction: row;
 	}
