--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -29,6 +29,7 @@ $white-color: #ffffff;
 $green-color: #01bb04;
 $box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
 .btn-main {
+	text-decoration: none;
 	background-color: $red-color;
 	color: $white-color;
 	padding: 18px 24px;
