useAuth modified and routes are compatible with userTypes

--- a/src/components/Table/index.scss
+++ b/src/components/Table/index.scss
@@ -70,7 +70,7 @@
 			.tbody {
 				.table_body_row {
 					.table_body_d {
-						padding: 1rem !important;
+						padding: 1rem 0 !important;
 						span {
 							font-size: 0.8rem;
 							@media (min-width: 768px) {
