--- a/src/components/Loader/index.scss
+++ b/src/components/Loader/index.scss
@@ -1,23 +1,56 @@
 @import "styles/global.scss";
-.loader {
-	font-size: 1.571rem;
-	color: $red-color;
+.lds-ellipsis {
 	display: inline-block;
-	font-family: Arial, Helvetica, sans-serif;
-	font-weight: 400;
 	position: relative;
+	width: 80px;
+	height: 20px;
 }
-.loader:after {
-	content: "";
-	height: 4px;
-	width: 0%;
-	display: block;
-	background: #ff3d00;
-	animation: 5s lineGrow linear infinite;
+.lds-ellipsis div {
+	position: absolute;
+	top: 10px;
+	width: 13px;
+	height: 13px;
+	border-radius: 50%;
+	background: $white-color;
+	animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
-
-@keyframes lineGrow {
-	to {
-		width: 100%;
+.lds-ellipsis div:nth-child(1) {
+	left: 8px;
+	animation: lds-ellipsis1 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(2) {
+	left: 8px;
+	animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(3) {
+	left: 32px;
+	animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(4) {
+	left: 56px;
+	animation: lds-ellipsis3 0.6s infinite;
+}
+@keyframes lds-ellipsis1 {
+	0% {
+		transform: scale(0);
+	}
+	100% {
+		transform: scale(1);
+	}
+}
+@keyframes lds-ellipsis3 {
+	0% {
+		transform: scale(1);
+	}
+	100% {
+		transform: scale(0);
+	}
+}
+@keyframes lds-ellipsis2 {
+	0% {
+		transform: translate(0, 0);
+	}
+	100% {
+		transform: translate(24px, 0);
 	}
 }
